# FastAPI_learning_project

./: .gitignore  docker-compose.yml  pyproject.toml
fastapi-application/: .env.template  main.py
fastapi-application/core/: config.py
fastapi-application/core/models/: __init__.py  db_helper.py
